<resources>

    <string name="app_name">机构巡更系统</string>

    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="menu_mark">≡</string>
    <string name="no_result">无结果</string>
    <string name="refresh">刷新</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="trouble">故障</string>
    <string name="normal">正常</string>
    <string name="logout">退出登陆</string>

    <string name="device_name_with_colon">设备名称：</string>
    <string name="device_status_with_colon">设备状态：</string>

    <string name="repairing">报修中</string>
    <string name="auto_requesting_repair">自动提交报修中</string>
    <string name="auto_requested_repair">已自动提交报修</string>
    <string name="auto_request_repair_error">自动提交报修失败</string>
    <string name="auto_re_request_repair">重新提交报修</string>

    <string name="be_checked">已签</string>
    <string name="not_be_check">未签</string>

    <string name="sn_format">设备：%1$s</string>
    <string name="distance_format">距离：%1$s米</string>
    <string name="distance_format_simple">%1$s米</string>
    <string name="checked_count_format">已签\n%1$s</string>
    <string name="uncheck_count_format">未签\n%1$s</string>
    <string name="location_current">当前位置</string>

    <string name="patrol_schedule">巡更任务</string>
    <string name="patrol_finished">任务完成</string>
    <string name="device_check">设备巡检</string>
    <string name="add_check_point">新增巡更点</string>
    <string name="device_repair_request">设备报修</string>
    <string name="device_replace">设备更换</string>
    <string name="schedule_is_empty">无巡更任务</string>

    <string name="login_success">登录成功</string>

    <string name="be_close_to_device_to_get_device_info">设备不在附近</string>

    <string name="check_point_bind_success">绑定成功</string>

    <string name="check_in">签到</string>
    <string name="check_in_success">签到成功</string>

    <string name="repair_request_success">报修申请已提交</string>

    <string name="check_point_list">巡更点列表</string>
    <string name="scan_device">设备扫描</string>

    <string name="device_status_is_normal">设备正常</string>
    <string name="device_status_low_power">电量：%1$s</string>
    <string name="device_status_low_power_full">设备电量低（%1$s）</string>

    <string name="patrol_schedule_is_done">该巡更任务已完成</string>

    <string name="patrol_schedule_title_format">%1$s　巡更任务</string>

    <string name="hint_input_account">请输入账号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_check_point">巡逻点名称</string>

    <string name="error_net_is_unavailable">请检查网络</string>
    <string name="error_request_failure">请求失败！</string>
    <string name="error_account_is_empty">账号不能为空！</string>
    <string name="error_password_is_empty">密码不能为空！</string>

    <string name="alert_location_permission_request">我们需要使用定位功能，请允许我们打开定位权限</string>
    <string name="alert_bluetooth_is_unavailable">该设备不支持蓝牙，请尝试其他设备</string>
    <string name="alert_all_check_point_is_checked">已完成所有签到！</string>
    <string name="alert_check_point_is_trouble">巡更点存在故障？</string>
    <string name="alert_check_point_is_empty">巡更点为空！</string>
    <string name="alert_check_point_had_been_repairing_requested">该巡更点已是报修状态</string>
    <string name="alert_repair_request_confirm">巡更点 <![CDATA[<font color="#f0a728">%1$s</font>]]> 将被变为 <![CDATA[<font color="#ff5555">报修</font>]]> 状态，确定吗？</string>
    <string name="alert_logout">确定要退出登录吗</string>

    <string name="progress_dialog_waiting">请稍等…</string>

</resources>
