<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plan_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:visibility="gone" />

    <com.cxt.patrolapp.mvp.view.customview.CustomSingleDrawableTextView
        android:id="@+id/no_result_icon"
        style="@style/CommonTextStyle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/schedule_is_empty"
        android:textSize="22sp"
        android:visibility="gone"
        app:textView_drawableHeight="100dp"
        app:textView_drawableTop="@drawable/no_result"
        app:textView_drawableWidth="100dp" />

    <TextView
        android:id="@+id/refresh_button"
        style="@style/CommonTextStyle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:padding="10dp"
        android:text="@string/refresh"
        android:textSize="18sp" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_main_menu_button"
        android:text="@string/menu_mark"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

</RelativeLayout>