<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:id="@+id/checked_count_text"
        style="@style/CommonTextStyle"
        android:layout_marginStart="120dp"
        android:layout_marginTop="120dp"
        android:text="@string/checked_count_format"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/uncheck_count_text"
        style="@style/CommonTextStyle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/uncheck_count_format"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        style="@style/CommonTextStyle"
        android:layout_marginStart="80dp"
        android:layout_marginTop="220dp"
        android:text="@string/location_current"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/check_point_text"
        style="@style/CommonTextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="245dp"
        android:maxWidth="260dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/searching_tip"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="245dp"
        app:indicatorColor="@android:color/white"
        app:indicatorName="BallPulseIndicator" />

    <com.cxt.patrolapp.mvp.view.customview.SimpleLongPressButton
        android:id="@+id/check_in_button"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:visibility="gone" />

</RelativeLayout>